# doc_ingestion_router

./: AI_project_description.md  AI_project_implementation_plan.md  AI_project_structure.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  template.env
.github/workflows/: docker-build-test.yml
app/: config.py  main.py
app/api/: endpoints.py  models.py
app/core/: security.py
app/services/: tika.py
src/doc_ingestion_router/: __init__.py
tests/: conftest.py  test_endpoints.py  test_integration.py  test_tika_service.py
tests/test_data/: empty.docx  hello_world.doc  hello_world.docx  hello_world_doc_tika_resp.xml  hello_world_docx_tika_resp.xml  hello_world_pdf_tika_resp.json
